# ChangeLog for app-text/rstspreadsheet
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> rstspreadsheet-0.1.2.ebuild:
  Keyworded x86.

  29 Jul 2011; James Rowe <jnrowe@gmail.com> rstspreadsheet-0.1.2.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com> rstspreadsheet-0.1.2.ebuild:
  Keyworded ~x86.

*rstspreadsheet-0.1.2 (29 Jun 2011)

  29 Jun 2011; James Rowe <jnrowe@gmail.com> +rstspreadsheet-0.1.2.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [395].
