@@ -5,7 +5,7 @@ DIST rstspreadsheet-0.1.2.tar.gz 5307 RMD160 c7a5818acf5230a490694161e5ce8554685
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7Ao+IACgkQzJrj3cAXR0kVfgCdEqIyZOIiexny2NveH4RFoE3m
-p9cAn0ppE5ODjhz1o0HZzb1IN42yc4iD
-=sWyt
+iEYEAREKAAYFAk9SPEcACgkQzJrj3cAXR0mT6ACfSe1mx72kE0M2U7JgoBc3u0we
+XHYAn1cF407pW2abx/0+k81dBP/RSFEc
+=Godr
 -----END PGP SIGNATURE-----
