@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 DESCRIPTION=Spreadsheet directive for docutils and Sphinx.
 EAPI=3
 HOMEPAGE=http://pypi.python.org/pypi/rstspreadsheet/
 KEYWORDS=amd64 x86
 LICENSE=MIT
-RDEPEND=dev-python/docutils >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+RDEPEND=dev-python/docutils >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 SLOT=0
 SRC_URI=mirror://pypi/r/rstspreadsheet/rstspreadsheet-0.1.2.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=c3e2ef1e0bd1d3011ecb6e49664496bc
+_md5_=5c9987dfe824b0e66baf66e5c7c2288b
